--- a/learn_inherit.ipynb
+++ b/learn_inherit.ipynb
@@ -295,7 +295,7 @@
     "### 四、类属性的继承规则\n",
     "1. 如果父类中有该属性，则子类会继承该属性\n",
     "2. 如果子类没有覆写该属性值，则子类的该属性值等于父类的该属性值\n",
-    "3. 如果子类赋写了该属性值，则子类的该属性值等于父类的该属性值"
+    "3. 如果子类赋写了该属性值，则子类的该属性值等于子类的该属性值"
    ],
    "metadata": {
     "collapsed": false,
@@ -320,8 +320,10 @@
     "class School:\n",
     "    name = \"学校统称\"\n",
     "\n",
+    "\n",
     "class Qiseguang(School):\n",
     "    pass\n",
+    "\n",
     "\n",
     "print(Qiseguang.name)"
    ],
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -360,12 +362,152 @@
     "class School:\n",
     "    name = \"学校统称\"\n",
     "\n",
+    "\n",
     "class Qiseguang(School):\n",
     "    name = \"七色光\"\n",
     "\n",
-    "print(Qiseguang.name)\n",
-    "\n"
+    "\n",
+    "print(Qiseguang.name)\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[__main__.Qiseguang, __main__.School, object]"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Qiseguang.mro()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "    a = 1\n",
+    "    @staticmethod\n",
+    "    def echoA():\n",
+    "        print(Parent.a)\n",
+    "\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    a = 2\n",
+    "\n",
+    "Child.echoA()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "    a = 1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def echoA(cls):\n",
+    "        print(cls.a)\n",
+    "\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    a = 2\n",
+    "\n",
+    "Child.echoA()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.a = 1\n",
+    "\n",
+    "    def echoA(self):\n",
+    "        print(self.a)\n",
+    "\n",
+    "\n",
+    "class Child(Parent):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.a = 2\n",
+    "\n",
+    "\n",
+    "c = Child()\n",
+    "c.echoA()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
